[package]
name = "geohash-rs"
version = "0.1.1"
edition = "2021"
authors = ["Dosang Gu <ddos0418@gmail.com>"]
description = "A geohash crate for Rust"
license = "MIT"
documentation = "https://docs.rs/geohash-rs/"
repository = "https://github.com/DosangGu/geohash-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
